--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 # SPDX-License-Identifier: BSD-2-Clause
 # SPDX-FileCopyrightText: 2019 Pino Toscano <pino@kde.org>
 # SPDX-FileCopyrightText: 2009-2023 Alexander Reinholdt <alexander.reinholdt@kdemail.net>
@@ -107,6 +108,10 @@ find_package(KF${QT_MAJOR_VERSION} ${KF5_MIN_VERSION} REQUIRED COMPONENTS
   WindowSystem
   XmlGui
 )
+
+# QtKeychain: For secure storage of credentials
+# (https://github.com/frankosterfeld/qtkeychain)
+find_package(Qt${QT_MAJOR_VERSION}Keychain 0.13.2 REQUIRED)
 
 # Install the plasmoid if desired
 if (SMB4K_INSTALL_PLASMOID)
